		- synchronize automatically when loading Audio CD tracks,
		- on "F5" key,
	- show more warnings in VDPAU and appearance settings,
	- fixed color in graphics subtitles (e.g. dvdsub),
	- reading files doesn't depend on FFmpeg module,
	- hide mouse cursor when cover image is visible,
	- updated Russian translation (victorr2007),
	- allow mouse wheel to change the volume,
	- added CMake build (Zamarin Arthur),
	- OpenGL2 now uses PBO if available,
	- bugfix,

Changes in QMPlay2 build 16.06.01:
	- diplaying and filtering all planar 8-bit YUV pixel formats (only OpenGL2 and QPainter video outputs)
	- allow to display only file names in playlist,
	- update Russian translation (victorr2007),
	- allow to detach from receiving commands,
	- allow to remember the repeat mode,
	- added random and repeat playback,
	- minor fixes in FPS and A/V sync,
	- support video size changes,
	- fix "rawvideo" playback,
	- bugfix,

Changes in QMPlay2 build 16.05.06:
	- split muted icon to muted and not muted,
	- bugfix,

Changes in QMPlay2 build 16.05.02:
	- fixed command line argument processing (now is possible to properly open or enqueue multiple files on Linux),
	- playlist uses floating-point variables for storing length (accurate group length information),
	- added audio balance (right click on volume slider to split channels),
	- don't play next entry after playback error by default,
	- fix restoring dock widgets state and window geometry,
	- added YouTube playlists and subtitles,
	- restore mute state on start-up,
	- seeking improvements,
	- bugfix,

Changes in QMPlay2 build 16.04.23:
	- VDPAU decoder without VDPAU writer is now available (disabled by default),
	- added spherical view for video playback (Ctrl+3; OpenGL only),
	- added Simplified Chinese translation (king Lee),
	- move video filtering to separate thread,
	- added Yadif deinterlacing filter,
	- better frame skipping,
	- replay gain fixes,
	- bugfix,

Changes in QMPlay2 build 16.03.24: